Fixed the alignment of the Logo Seperator
Fixed the alignment of the Logo Seperator

--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ header span.logoline-top{
     font-weight: 300;
     position: relative;
     top: -1px;
-    left:-3px;
+    left: -2px;
 }
 
 header a{
